# CardNumberDetector

./: CMakeLists.txt  build.gradle
libs/opencv/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/opencv/include/opencv2/: cvconfig.h
libs/opencv/lib/: libopencv_aruco.so.3.2  libopencv_bgsegm.so.3.2.0  libopencv_bioinspired.so.3.2.0  libopencv_calib3d.so.3.2  libopencv_ccalib.so.3.2  libopencv_face.so.3.2  libopencv_features2d.so.3.2.0  libopencv_freetype.so.3.2.0  libopencv_fuzzy.so.3.2  libopencv_highgui.so.3.2.0  libopencv_imgcodecs.so.3.2.0  libopencv_ml.so.3.2  libopencv_objdetect.so.3.2.0  libopencv_optflow.so.3.2  libopencv_photo.so.3.2  libopencv_plot.so.3.2.0  libopencv_rgbd.so.3.2  libopencv_saliency.so.3.2.0  libopencv_shape.so.3.2  libopencv_stereo.so.3.2  libopencv_structured_light.so.3.2.0  libopencv_superres.so.3.2.0  libopencv_surface_matching.so.3.2.0  libopencv_text.so.3.2.0  libopencv_tracking.so.3.2  libopencv_video.so.3.2  libopencv_videostab.so.3.2  libopencv_xfeatures2d.so.3.2  libopencv_ximgproc.so.3.2.0  libopencv_xobjdetect.so.3.2
src/cpp/: main.cpp
src/resources/trainingBots/: trained1.xml  trained2.xml
